# Kwayk

./: .gitignore  CMakeLists.txt  README.md
Assets/: CMakeLists.txt  default.cfg
Assets/decals/: CMakeLists.txt
Assets/images/: CMakeLists.txt
Assets/maps/: CMakeLists.txt
Assets/maps/b_batt0/: B_batt0_map.qml  CMakeLists.txt
Assets/maps/b_batt1/: B_batt1_map.qml  CMakeLists.txt
Assets/maps/b_bh10/: B_bh10_map.qml  CMakeLists.txt
Assets/maps/b_bh100/: B_bh100_map.qml  CMakeLists.txt
Assets/maps/b_bh25/: B_bh25_map.qml  CMakeLists.txt
Assets/maps/b_exbox2/: B_exbox2_map.qml  CMakeLists.txt
Assets/maps/b_explob/: B_explob_map.qml  CMakeLists.txt
Assets/maps/b_nail0/: B_nail0_map.qml  CMakeLists.txt
Assets/maps/b_nail1/: B_nail1_map.qml  CMakeLists.txt
Assets/maps/b_rock0/: B_rock0_map.qml  CMakeLists.txt
Assets/maps/b_rock1/: B_rock1_map.qml  CMakeLists.txt
Assets/maps/b_shell0/: B_shell0_map.qml  CMakeLists.txt
Assets/maps/b_shell1/: B_shell1_map.qml  CMakeLists.txt
Assets/maps/e1m1/: CMakeLists.txt  E1m1_map.qml  E1m1_map_hull0.qml
Assets/maps/e1m2/: CMakeLists.txt  E1m2_map.qml  E1m2_map_hull0.qml
Assets/maps/e1m7/: CMakeLists.txt  E1m7_map.qml  E1m7_map_hull0.qml
Assets/maps/start/: CMakeLists.txt  Start_map.qml  Start_map_hull0.qml
Assets/progs/: CMakeLists.txt
Assets/sounds/: CMakeLists.txt
Backend/: CMakeLists.txt  charactercontactlistener.cpp  charactercontactlistener.h  cmd.cpp  cmd.h  contactlistener.cpp  contactlistener.h  decalgeometry.cpp  decalgeometry.h  lightstyletexture.cpp  lightstyletexture.h  mdl.cpp  mdl.h  mdlcache.cpp  mdlcache.h  mdlgeometry.cpp  mdlgeometry.h  physicslayers.cpp  physicslayers.h  viewmodelrenderextension.cpp  viewmodelrenderextension.h
Backend/webspatialaudio/: webambientsound.cpp  webambientsound.h  webaudioengine.cpp  webaudioengine.h  webaudiolistener.cpp  webaudiolistener.h  webspatialsound.cpp  webspatialsound.h
Kwayk/: App.qml  CMakeLists.txt
Kwayk/Core/: CMakeLists.txt  Cmds.qml  Decals.qml  Main.qml  Particles.qml  PlayerController.qml  Sound.qml  Vars.qml  View.qml
Kwayk/Core/Effects/: BlendEffect.qml  TeleportEffect.qml  TransitionEffect.qml  WarpEffect.qml
Kwayk/Core/Materials/: AliasMaterial.qml  BrushMaterial.qml  DecalMaterial.qml  SkyLayerMaterial.qml  TurbulentMaterial.qml
Kwayk/Core/shaders/: alias.frag  blend.frag  brush.frag  brush.vert  decal.frag  decal.vert  skylayer.frag  skylayer.vert  teleport.frag  transition.frag  turbulent.frag  warp.frag
Kwayk/Game/: Ai.qml  Alias.qml  CMakeLists.txt  Combat.qml  Defs.qml  Entity.qml  Fight.qml  Fly.qml  FlyTrail.qml  Game.qml  Item.qml  Monster.qml  Player.qml  Pusher.qml  Solid.qml  Think.qml  ViewModel.qml  Walker.qml  Weapons.qml  World.qml
Kwayk/Game/Buttons/: Button.qml
Kwayk/Game/Doors/: Door.qml  SecretDoor.qml
Kwayk/Game/Flies/: BossLavaball.qml  Grenade.qml  Laser.qml  Missile.qml  ShalMissile.qml  Spike.qml  ZomGib.qml
Kwayk/Game/Items/: Armor.qml  Backpack.qml  Cells.qml  Envirosuit.qml  GrenadeLauncherItem.qml  Health.qml  Invisibility.qml  Invulnerability.qml  Key1.qml  Key2.qml  LightningItem.qml  NailgunItem.qml  RocketLauncherItem.qml  Rockets.qml  Shells.qml  Sigil.qml  Spikes.qml  SuperDamage.qml  SuperNailgunItem.qml  SuperShotgunItem.qml
Kwayk/Game/Maps/: E1m1.qml  E1m2.qml  E1m7.qml  Start.qml
Kwayk/Game/Misc/: AmbientCompHum.qml  AmbientDrip.qml  AmbientDrone.qml  AmbientFluoroBuzz.qml  AmbientLightBuzz.qml  AmbientSuckWind.qml  AmbientSwamp1.qml  AmbientSwamp2.qml  AmbientThunder.qml  Crucified.qml  DeathBubbles.qml  Dlight.qml  EpisodeGate.qml  EventLightning.qml  Explobox.qml  Flame.qml  Flame2.qml  Gib.qml  Lavaball.qml  Light.qml  LightFluoro.qml  LightFluorospark.qml  Meat.qml  Tfog.qml  TrapSpikeShooter.qml  Wall.qml
Kwayk/Game/Monsters/: Boss.qml  Demon.qml  Dog.qml  Enforcer.qml  Fish.qml  HellKnight.qml  Knight.qml  Ogre.qml  Oldone.qml  Shalrath.qml  Shambler.qml  Soldier.qml  Tarbaby.qml  Wizard.qml  Zombie.qml
Kwayk/Game/Plats/: Plat.qml  Train.qml
Kwayk/Game/Triggers/: ChangeLevelTrigger.qml  CounterTrigger.qml  DeathTrigger.qml  DoorTrigger.qml  InfoIntermission.qml  MultipleTrigger.qml  OnceTrigger.qml  PathCorner.qml  (+6 more)
Kwayk/Ui/: CMakeLists.txt  CenterString.qml  Conback.qml  Crosshair.qml  FinaleOverlay.qml  IntermissionOverlay.qml  Scoreboard.qml  Ui.qml
Kwayk/js/: clipper.js  easing.js  keys.js  math.js  vec.js
Kwayk/src/: import_qml_plugins.h  keycontroller.cpp  keycontroller.h  main.cpp  mousecontroller.cpp  mousecontroller.h
(+533 files in other folders)
